--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food TailwindCss</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Food TailwindCss</h1>
+    <div>
+      <div>
+        <nav>
+          <div>
+            <h1><a href="/">Food Ninja</a></h1>
+          </div>
+          <ul>
+            <li>
+              <a href="#"><span>Home</span></a>
+            </li>
+            <li>
+              <a href="#"><span>About</span></a>
+            </li>
+            <li>
+              <a href="#"><span>Contact</span></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <main>
+        <div>
+          <a href="#">Login</a>
+          <a href="#">Sign up</a>
+        </div>
+
+        <header>
+          <h2>Receipts</h2>
+          <h3>For Ninjas</h3>
+        </header>
+
+        <div>
+          <h4>Latest Recipes</h4>
+
+          <div>
+            <div>
+              <img src="img/stew.jpg" alt="stew" />
+              <div>
+                <span>5 Bean Chilli Stew</span>
+                <span>Recipe by Mario</span>
+              </div>
+            </div>
+          </div>
+
+          <h4>Most Popular</h4>
+
+          <div></div>
+
+          <div>
+            <div>Load more</div>
+          </div>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
