--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
       <div>
         <nav>
           <div>
-            <h1 class="font-bold uppercase"><a href="/">Food Ninja</a></h1>
+            <h1 class="font-bold uppercase p-4 border-b border-gray-100">
+              <a href="/">Food Ninja</a>
+            </h1>
           </div>
           <ul>
             <li class="text-gray-700 font-bold">
@@ -27,7 +29,7 @@
         </nav>
       </div>
 
-      <main>
+      <main class="px-16 py-6">
         <div>
           <a href="#">Login</a>
           <a href="#">Sign up</a>
@@ -39,9 +41,11 @@
         </header>
 
         <div>
-          <h4 class="font-bold">Latest Recipes</h4>
+          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
+            Latest Recipes
+          </h4>
 
-          <div>
+          <div class="mt-8">
             <div>
               <img src="img/stew.jpg" alt="stew" />
               <div>
@@ -51,9 +55,11 @@
             </div>
           </div>
 
-          <h4 class="font-bold">Most Popular</h4>
+          <h4 class="font-bold mt-12 pb-2 border-b border-gray-200">
+            Most Popular
+          </h4>
 
-          <div></div>
+          <div class="mt-8"></div>
 
           <div>
             <div>Load more</div>
