add config file

--- a/public/index.html
+++ b/public/index.html
@@ -31,12 +31,14 @@
 
       <main class="px-16 py-6">
         <div>
-          <a href="#">Login</a>
-          <a href="#">Sign up</a>
+          <a href="#" class="text-primary">Login</a>
+          <a href="#" class="text-primary">Sign up</a>
         </div>
 
         <header>
-          <h2 class="text-gray-800 text-4xl font-semibold">Receipts</h2>
+          <h2 class="text-gray-800 text-4xl font-semibold">
+            Receipts
+          </h2>
           <h3 class="text-2xl font-semibold">For Ninjas</h3>
         </header>
 
@@ -62,7 +64,7 @@
           <div class="mt-8"></div>
 
           <div>
-            <div>Load more</div>
+            <div class="bg-secondary-100 text-secondary-200">Load more</div>
           </div>
         </div>
       </main>
