--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Food TailwindCss</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body class="text-gray-600">
+  <body class="text-gray-600 font-body">
     <div>
       <div>
         <nav>
@@ -29,10 +29,10 @@
         </nav>
       </div>
 
-      <main class="px-16 py-6">
-        <div>
+      <main class="px-16 py-6 bg-gray-100">
+        <div class="flex justify-center md:justify-end">
           <a href="#" class="text-primary">Login</a>
-          <a href="#" class="text-primary">Sign up</a>
+          <a href="#" class="text-primary ml-2">Sign up</a>
         </div>
 
         <header>
@@ -48,11 +48,47 @@
           </h4>
 
           <div class="mt-8">
-            <div>
-              <img src="img/stew.jpg" alt="stew" />
-              <div>
-                <span>5 Bean Chilli Stew</span>
-                <span>Recipe by Mario</span>
+            <!-- cards go here -->
+            <div class="card">
+              <img
+                src="img/stew.jpg"
+                alt="stew"
+                class="w-full h-32 sm:h-48 object-cover"
+              />
+              <div class="m-4">
+                <span class="font-bold">5 Bean Chilli Stew</span>
+                <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+              </div>
+              <div class="badge">
+                <span>25 mins</span>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="img/noodles.jpg"
+                alt="noodles"
+                class="w-full h-32 sm:h-48 object-cover"
+              />
+              <div class="m-4">
+                <span class="font-bold">Veg Noddles</span>
+                <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+              </div>
+              <div class="badge">
+                <span>25 mins</span>
+              </div>
+            </div>
+            <div class="card">
+              <img
+                src="img/curry.jpg"
+                alt="curry"
+                class="w-full h-32 sm:h-48 object-cover"
+              />
+              <div class="m-4">
+                <span class="font-bold">Tofu Curry</span>
+                <span class="block text-gray-500 text-sm">Recipe by Mario</span>
+              </div>
+              <div class="badge">
+                <span>25 mins</span>
               </div>
             </div>
           </div>
@@ -63,7 +99,7 @@
 
           <div class="mt-8"></div>
 
-          <div>
+          <div class="flex justify-center">
             <div class="bg-secondary-100 text-secondary-200">Load more</div>
           </div>
         </div>
