--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body class="text-gray-600 font-body">
-    <div>
-      <div>
+    <div class="grid md:grid-cols-3">
+      <div class="col-span-1">
         <nav>
           <div>
             <h1 class="font-bold uppercase p-4 border-b border-gray-100">
@@ -17,22 +17,54 @@
           </div>
           <ul>
             <li class="text-gray-700 font-bold">
-              <a href="#"><span>Home</span></a>
+              <a href="#">
+                <span>Home</span>
+                <svg viewBox="0 0 20 20" fill="currentColor" class="w-5">
+                  <path
+                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
+                  ></path>
+                </svg>
+              </a>
             </li>
             <li>
-              <a href="#"><span>About</span></a>
+              <a href="#">
+                <span>
+                  About
+                </span>
+                <svg viewBox="0 0 20 20" fill="currentColor" class="w-5">
+                  <path
+                    fill-rule="evenodd"
+                    d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+              </a>
             </li>
             <li>
-              <a href="#"><span>Contact</span></a>
+              <a href="#"
+                ><span>Contact</span>
+                <svg viewBox="0 0 20 20" fill="currentColor" class="w-5">
+                  <path
+                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
+                  ></path>
+                  <path
+                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
+                  ></path>
+                </svg>
+              </a>
             </li>
           </ul>
         </nav>
       </div>
 
-      <main class="px-16 py-6 bg-gray-100">
+      <main class="px-16 py-6 bg-gray-100 md:col-span-2">
         <div class="flex justify-center md:justify-end">
-          <a href="#" class="text-primary">Login</a>
-          <a href="#" class="text-primary ml-2">Sign up</a>
+          <a href="#" class="btn text-primary border-primary md:border-2"
+            >Login</a
+          >
+          <a href="#" class="btn text-primary border-primary md:border-2 ml-2"
+            >Sign up</a
+          >
         </div>
 
         <header>
@@ -47,7 +79,7 @@
             Latest Recipes
           </h4>
 
-          <div class="mt-8">
+          <div class="mt-8 grid sm:grid-cols-3 gap-10">
             <!-- cards go here -->
             <div class="card">
               <img
@@ -60,6 +92,17 @@
                 <span class="block text-gray-500 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
+                <svg
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                  class="w-5 inline-block"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
                 <span>25 mins</span>
               </div>
             </div>
@@ -74,6 +117,17 @@
                 <span class="block text-gray-500 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
+                <svg
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                  class="w-5 inline-block"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
                 <span>25 mins</span>
               </div>
             </div>
@@ -88,6 +142,17 @@
                 <span class="block text-gray-500 text-sm">Recipe by Mario</span>
               </div>
               <div class="badge">
+                <svg
+                  viewBox="0 0 20 20"
+                  fill="currentColor"
+                  class="w-5 inline-block"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
                 <span>25 mins</span>
               </div>
             </div>
@@ -100,7 +165,7 @@
           <div class="mt-8"></div>
 
           <div class="flex justify-center">
-            <div class="bg-secondary-100 text-secondary-200">Load more</div>
+            <div class="btn bg-secondary-100 text-secondary-200">Load more</div>
           </div>
         </div>
       </main>
